Run test in GitHub workflow

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,3 +33,18 @@ jobs:
         run: |
           source venv/bin/activate
           scripts/lint.sh
+
+  test:
+    name: Test
+    runs-on: 'ubuntu-24.04'
+    steps:
+      - name: Setup Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.8'
+
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Test
+        run: scripts/test.sh
